Rearrange extended data figures for better logic

--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -74,8 +74,10 @@ figs:
 	ln -sf ${FIGSRC}/mitotic-strain/figure.png ${FIGHIR}/FigED3.png
 	ln -sf ${FIGSRC}/live-details/figure.png ${FIGHIR}/FigED4.png
 	ln -sf ${FIGSRC}/model-features/figure.png ${FIGHIR}/FigED5.png
-	ln -sf ${FIGSRC}/genetic-features/figure.png ${FIGHIR}/FigED6.png
-	ln -sf ${FIGSRC}/genetic-comparative/figure.png ${FIGHIR}/FigED7.png
+	ln -sf ${FIGSRC}/slp-analyses/figure.png ${FIGHIR}/FigED6.png
+	ln -sf ${FIGSRC}/genetic-features/figure.png ${FIGHIR}/FigED7.png
+	ln -sf ${FIGSRC}/mutant-expression/figure.png ${FIGHIR}/FigED8.png
+	ln -sf ${FIGSRC}/genetic-comparative/figure.png ${FIGHIR}/FigED9.png
 	# Supplementary information
 	ln -sf ${FIGSRC}/ectopic-variability/figure.png ${FIGHIR}/FigS1.png
 	ln -sf ${FIGSRC}/apical-strain/figure.png ${FIGHIR}/FigS2.png
