Split references in two sections

--- a/3-text/Makefile
+++ b/3-text/Makefile
@@ -2,6 +2,7 @@
 
 # Basename for the main file
 FILE=furrow
+SUPP=supplement
 
 # Directory with template files, stylesheets, filters
 RESOURCES=resources
@@ -42,6 +43,9 @@ FILEOUT=${DATE}_${BRANCH}_${FILE}
 
 # Filters for running Pandoc
 FILTERS=--lua-filter=${RESOURCES}/pagebreak.lua --lua-filter=${RESOURCES}/scholarly-metadata.lua --lua-filter=${RESOURCES}/author-info-blocks.lua --filter pandoc-fignos --filter pandoc-tablenos --citeproc --mathml
+
+#--lua-filter=${RESOURCES}/multi-refs.lua 
+#--lua-filter=${RESOURCES}/section-bibliographies.lua 
 
 # Pandoc variables for PDF
 PDFVARS=-V fontfamily:libertine -V linestretch:1 -V geometry:bindingoffset=2mm -V geometry:hmargin=25mm -V geometry:vmargin=25mm -V papersize:a4 -V fontsize:11pt -V urlcolor='[HTML]{0969da}'
